bugfix: login-icon in footer should not wrap to next line -> new class div.lzy-login-link-menu -> float:right

--- a/css/scss/lizzy_basics.scss
+++ b/css/scss/lizzy_basics.scss
@@ -470,7 +470,8 @@ footer {
 	}
 	#loggedInUser, 
     .loggedInUser,
-    .loggedInUser div.lzy-login-link {
+    .loggedInUser div.lzy-login-link,
+    .loggedInUser div.lzy-login-link-menu {
 		float: right;
 	}
 }
